[package]
name = "threat_fox_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json", "serde_json"] }
serde = { version = "1.0.163", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
